_sources/snippets/lang/memory/index.txt

==================
memory
==================

.. contents::
    :depth: 2



copy.scm
========================



memset
==================

Fill 0

.. code-block:: sh
   

    $ ce 'int a[10][10]; memset(a, 0, sizeof(a)); p("%d", a[0][0]);' 
    0

Fill -1

.. code-block:: sh
   

    $ ce 'int a[10][10]; memset(a, -1, sizeof(a)); p("%d", a[0][0]);' 
    -1


.. warning::

    Don't work because memset fills numbers but 0 or -1 at each byte


.. code-block:: sh
   

    $ ce 'int a[10][10]; memset(a, 1, sizeof(a)); p("%d", a[0][0]);' 
    16843009


.. code-block:: sh
   

    $ ce 'int a[10][10]; memset(a, 10, sizeof(a)); p("%d", a[0][0]);' 
    168430090


16進数から2進数への変換は、f => 1111, 0 => 0000, 1 => 0001と考えるので
00000001が4回繰り返しコピーされていることがわかる


.. code-block:: sh
   

    $ ce 'int i[1]; memset(i, 1, sizeof(int)); printf("%x", i[0]);' 
    1010101

You can update each char of the string with an array

.. code-block:: sh
   

    $ ce 'char p[]="abcde", q[]="AAA"; memcpy(p,q,3+1); p(p);' 
    <stdin>:3:52: error: called object type 'char *' is not a function or function pointer
        char p[]="abcde", q[]="AAA"; memcpy(p,q,3+1); p(p);
                                                      ~^
    1 error generated.
    



init.scm
========================



malloc.scm
==============================

.. todo:: 2 * 文字数 + 1みたいな領域確保のときに+1し忘れのエラーとなるサンプル用意
fill 0

.. code-block:: sh
   

    $ ce 'char*p=calloc(10, sizeof(char)); ps(p);' 
    <stdin>:3:38: warning: implicit declaration of function 'ps' is invalid in C99 [-Wimplicit-function-declaration]
        char*p=calloc(10, sizeof(char)); ps(p);
                                         ^
    1 warning generated.
    /tmp/--ZfTntY.o: In function `main':
    -:(.text+0x328): undefined reference to `ps'
    clang: error: linker command failed with exit code 1 (use -v to see invocation)
    

reallocはO(n)じゃないの?; realloc uses copy

.. code-block:: sh
   

    $ ce 'char*p=malloc(10);memcpy(p, "abcd", 5); printf("%s", realloc(p, 5));' 
    abcd


.. code-block:: sh
   

    $ ce 'char*p=malloc(10);memcpy(p, "abcd", 5); if (realloc(p, 5) != p) ps("not same");' 
    <stdin>:3:69: warning: implicit declaration of function 'ps' is invalid in C99 [-Wimplicit-function-declaration]
        char*p=malloc(10);memcpy(p, "abcd", 5); if (realloc(p, 5) != p) ps("not same");
                                                                        ^
    1 warning generated.
    /tmp/--N8LCgM.o: In function `main':
    -:(.text+0x34b): undefined reference to `ps'
    clang: error: linker command failed with exit code 1 (use -v to see invocation)
    

mallocも0で初期化されているみたい

.. code-block:: sh
   

    $ ce 'char*p=malloc(1 << 10); REP(i,10) if(p[i]) ps("1");' 
    <stdin>:3:48: warning: implicit declaration of function 'ps' is invalid in C99 [-Wimplicit-function-declaration]
        char*p=malloc(1 << 10); REP(i,10) if(p[i]) ps("1");
                                                   ^
    1 warning generated.
    /tmp/--holm6Z.o: In function `main':
    -:(.text+0x33d): undefined reference to `ps'
    clang: error: linker command failed with exit code 1 (use -v to see invocation)
    


.. warning::

    Can't get enough memory


.. code-block:: sh
   

    $ ce 'char*p=malloc(1 << 31); printf("A%sA",p);' 
    A(null)A

